--- a/apps/castopod/charts/castopod/templates/ingress.yaml
+++ b/apps/castopod/charts/castopod/templates/ingress.yaml
@@ -4,6 +4,11 @@ metadata:
   name: castopod
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"    
 spec:
   ingressClassName: public
   rules:
