--- a/external-charts/serial-gateway/templates/ingress.yaml
+++ b/external-charts/serial-gateway/templates/ingress.yaml
@@ -12,9 +12,9 @@ spec:
       paths:
       - backend:
           service:
-            name: castopod
+            name: serial-gateway
             port:
-              number: 80
+              number: 8080
         path: /
         pathType: Prefix
   tls:
