--- a/apps/cafe/charts/cafe/templates/limit-range.yaml
+++ b/apps/cafe/charts/cafe/templates/limit-range.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: limit-range
-  namespace: iot
+  namespace: serial-gateway
 spec:
   limits:
   - default: # this section defines default limits
