--- a/external-charts/ispy/templates/deployment.yaml
+++ b/external-charts/ispy/templates/deployment.yaml
@@ -15,13 +15,22 @@ spec:
       labels:
         app: ispy
     spec:
+      serviceAccountName: ispy
       securityContext:
         runAsUser: 1000
         runAsGroup: 3000
         fsGroup: 2000    
       containers:   
         - image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: IfNotPresent
           name: ispy
+          env:
+          - name: ISPY_IN_CLUSTER
+            value: "true"
+          - name: ISPY_SERVER_PORT
+            value: "8080"
+          # - name: ISPY_WWW_ROOT
+          #   value: Let this default to the folder where the bin is running
           resources:
             requests:
               cpu: 32m
