use virtualservice in place of ingress

--- a/apps/kps/helmfile.yaml
+++ b/apps/kps/helmfile.yaml
@@ -12,6 +12,11 @@ releases:
   values:
   - values/kps.yaml.gotmpl
 
+- name: kps-mesh
+  namespace: kps
+  chart: charts/kps-mesh
+  values:
+  - values/kps-mesh.yaml.gotmpl
 
 commonLabels:
   app: kps
