--- a/env/weeble/helmfile.yaml
+++ b/env/weeble/helmfile.yaml
@@ -31,6 +31,7 @@ environments:
     values:
       - clusterName: weeble
       - domain: tonygilkerson.us
+      - clientID: 139335277626-sin6k10hromupmg23psedq5camh73926.apps.googleusercontent.com
       
 
 
