--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -40,3 +40,13 @@ metadata:
   labels:
     {{- include "ns-common.labels" . | nindent 4 }}
     {{- include "ns-pod-security-restricted.labels" . | nindent 4 }}
+---
+# I would like to run this as restricted but I had issue running caddy as non root
+# I need to look into that
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  notebook
+  labels:
+    {{- include "ns-common.labels" . | nindent 4 }}
+    {{- include "ns-pod-security-baseline.labels" . | nindent 4 }}
