--- a/apps/service-mesh/helmfile.yaml
+++ b/apps/service-mesh/helmfile.yaml
@@ -14,21 +14,19 @@ releases:
   values:
   - values/istiod.yaml.gotmpl
 
-- name: istio-ingress-gateway
-  namespace: istio-system
-  chart: ../../external-charts/gateway
-  values:
-  - values/istio-ingress-gateway.yaml.gotmpl
-  needs:
-  - istio-system/istiod
+# - name: istio-ingress-gateway
+#   namespace: istio-system
+#   chart: ../../external-charts/gateway
+#   values:
+#   - values/istio-ingress-gateway.yaml.gotmpl
+#   needs:
+#   - istio-system/istiod
 
 - name: istio-etc
   namespace: istio-system
   chart: charts/istio-etc
   values:
   - values/istio-etc.yaml.gotmpl
-  needs:
-  - istio-system/istio-ingress-gateway
 
 - name: istio-tls-certs
   namespace: istio-system
