--- a/external-charts/notebook/templates/deployment.yaml
+++ b/external-charts/notebook/templates/deployment.yaml
@@ -19,12 +19,12 @@ spec:
       - image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: notebook
         resources: {}
-        # securityContext:
-        #   runAsUser: 65534
-        #   runAsGroup: 65534
-        #   allowPrivilegeEscalation: false
-        #   capabilities:
-        #     drop: ["ALL"]
-        #   runAsNonRoot: true
-        #   seccompProfile:
-        #     type: RuntimeDefault
+        securityContext:
+          runAsUser: 65534
+          runAsGroup: 65534
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
+          runAsNonRoot: true
+          seccompProfile:
+            type: RuntimeDefault
