--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -20,6 +20,14 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name:  cert-manager
+  labels:
+    {{- include "ns-common.labels" . | nindent 4 }}
+    {{- include "ns-pod-security-restricted.labels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name:  ispy
   labels:
     {{- include "ns-common.labels" . | nindent 4 }}
