--- a/apps/service-mesh/charts/istio-etc/templates/gateway.yaml
+++ b/apps/service-mesh/charts/istio-etc/templates/gateway.yaml
@@ -6,11 +6,16 @@ kind: Gateway
 metadata:
   name: cafe-gateway
   namespace: istio-system
+  annotations:
+    cert-manager.io/issuer: letsencrypt-http01
 spec:
   gatewayClassName: istio
   listeners:
-  - name: http
-    # hostname: "notebook.{{ .Values.domain }}"
+  #
+  # Notebook
+  #
+  - name: http-notebook
+    hostname: "notebook.{{ .Values.domain }}"
     protocol: HTTP
     port: 80
     allowedRoutes:
@@ -20,8 +25,8 @@ spec:
           matchLabels:
             cafe-gateway: enabled
 
-  - name: https
-    # hostname: "notebook.{{ .Values.domain }}"
+  - name: https-notebook
+    hostname: "notebook.{{ .Values.domain }}"
     protocol: HTTPS
     port: 443
     allowedRoutes:
@@ -33,36 +38,173 @@ spec:
     tls:
       mode: Terminate
       certificateRefs:
-      - name: tls-cert
----
-# # ref: https://istio.io/latest/docs/reference/config/networking/gateway/
-# apiVersion: networking.istio.io/v1beta1
-# kind: Gateway
-# metadata:
-#   name: istio-ingress-gateway
-# spec:
-#   selector:
-#     istio: ingress-gateway
-#   servers:
-#   - port:
-#       number: 80
-#       name: http
-#       protocol: HTTP
-#     hosts:
-#     - "{{ .Values.domain }}"
-#     - "*.{{ .Values.domain }}"
-#     tls:
-#       # sends 301 redirect for http requests
-#       httpsRedirect: true
-#   - port:
-#       number: 443
-#       name: https-internal
-#       protocol: HTTPS
-#     hosts:
-#     - "{{ .Values.domain }}"
-#     - "*.{{ .Values.domain }}"
-#     tls:
-#       credentialName: tls-cert
-#       # enables HTTPS on this port
-#       mode: SIMPLE
-# ---
+      - name: tls-cert-notebook
+  #
+  # ispy
+  #
+  - name: http-ispy
+    hostname: "ispy.{{ .Values.domain }}"
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+
+  - name: https-ispy
+    hostname: "ispy.{{ .Values.domain }}"
+    protocol: HTTPS
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: tls-cert-ispy
+  #
+  # alert
+  #
+  - name: http-alert
+    hostname: "alert.{{ .Values.domain }}"
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+
+  - name: https-alert
+    hostname: "alert.{{ .Values.domain }}"
+    protocol: HTTPS
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: tls-cert-alert
+
+  #
+  # grafana
+  #
+  - name: http-grafana
+    hostname: "grafana.{{ .Values.domain }}"
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+
+  - name: https-grafana
+    hostname: "grafana.{{ .Values.domain }}"
+    protocol: HTTPS
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: tls-cert-grafana
+  #
+  # prometheus
+  #
+  - name: http-prometheus
+    hostname: "prometheus.{{ .Values.domain }}"
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+
+  - name: https-prometheus
+    hostname: "prometheus.{{ .Values.domain }}"
+    protocol: HTTPS
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: tls-cert-prometheus
+  #
+  # serial-gateway
+  #
+  - name: http-serial-gateway
+    hostname: "serial-gateway.{{ .Values.domain }}"
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+
+  - name: https-serial-gateway
+    hostname: "serial-gateway.{{ .Values.domain }}"
+    protocol: HTTPS
+    port: 443
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            cafe-gateway: enabled
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: tls-cert-serial-gateway
+  # #
+  # # testme
+  # #
+  # - name: http-testme
+  #   hostname: "testme.{{ .Values.domain }}"
+  #   protocol: HTTP
+  #   port: 80
+  #   allowedRoutes:
+  #     namespaces:
+  #       from: Selector
+  #       selector:
+  #         matchLabels:
+  #           cafe-gateway: enabled
+
+  # - name: https-testme
+  #   hostname: "testme.{{ .Values.domain }}"
+  #   protocol: HTTPS
+  #   port: 443
+  #   allowedRoutes:
+  #     namespaces:
+  #       from: Selector
+  #       selector:
+  #         matchLabels:
+  #           cafe-gateway: enabled
+  #   tls:
+  #     mode: Terminate
+  #     certificateRefs:
+  #     - name: tls-cert-testme
