--- a/external-charts/serial-gateway/templates/httproute.yaml
+++ b/external-charts/serial-gateway/templates/httproute.yaml
@@ -1,27 +1,27 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ispy
+  name: serial-gateway
 spec:
   parentRefs:
   - name: cafe-gateway
     namespace: istio-system
-    sectionName: https-ispy 
+    sectionName: https-serial-gateway
   rules:
   - backendRefs:
-    - name: ispy
+    - name: serial-gateway
       weight: 1
       port: 8080
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ispy-http-redirect
+  name: serial-gateway-http-redirect
 spec:
   parentRefs:
   - name: cafe-gateway
     namespace: istio-system
-    sectionName: http-ispy     
+    sectionName: http-serial-gateway
   rules:
   - filters:
     - type: RequestRedirect
