--- a/env/weeble/helmfile.yaml
+++ b/env/weeble/helmfile.yaml
@@ -29,6 +29,9 @@ helmfiles:
 - path: ../../apps/notebook
   values:
   - {{ $.Values | toYaml | nindent 4}}
+- path: ../../apps/httpbin
+  values:
+  - {{ $.Values | toYaml | nindent 4}}
 
 
 
