--- a/external-charts/notebook/templates/deployment.yaml
+++ b/external-charts/notebook/templates/deployment.yaml
@@ -20,11 +20,11 @@ spec:
         name: notebook
         resources: {}
         securityContext:
-          runAsUser: 65534
-          runAsGroup: 65534
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop: ["ALL"]
+          # runAsUser: 65534
+          # runAsGroup: 65534
+          # allowPrivilegeEscalation: false
+          # capabilities:
+          #   drop: ["ALL"]
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
