--- a/apps/httpbin/charts/httpbin/templates/httproute.yaml
+++ b/apps/httpbin/charts/httpbin/templates/httproute.yaml
@@ -18,22 +18,26 @@ spec:
     #     - name: I_AM
     #       value: app1
 ---
-# apiVersion: gateway.networking.k8s.io/v1
-# kind: HTTPRoute
-# metadata:
-#   name: httpbin-http
-# spec:
-#   parentRefs:
-#   - name: cafe-gateway
-#     namespace: istio-system
-#     sectionName: httpbin-http
-#   rules:
-#   - filters:
-#     - requestRedirect:
-#         scheme: https
-#         statusCode: 301
-#       type: RequestRedirect
-#     matches:
-#     - path:
-#         type: PathPrefix
-#         value: /
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: httpbin
+spec:
+  hostnames:
+  - httpbin.tonygilkerson.us
+  parentRefs:
+  - group: gateway.networking.k8s.io
+    kind: Gateway
+    name: cafe-gateway
+    namespace: istio-system
+  rules:
+  - backendRefs:
+    - group: ""
+      kind: Service
+      name: httpbin
+      port: 80
+      weight: 1
+    matches:
+    - path:
+        type: PathPrefix
+        value: /
