--- a/external-charts/notebook/Chart.yaml
+++ b/external-charts/notebook/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: notebook
 description: A Helm chart for Kubernetes
 type: application
-version: v1.0.7
-appVersion: "v1.0.7"
+version: "0.0.2"
+appVersion: "0.0.2"
