--- a/external-charts/notebook/templates/httproute.yaml
+++ b/external-charts/notebook/templates/httproute.yaml
@@ -3,32 +3,21 @@ kind: HTTPRoute
 metadata:
   name: notebook
 spec:
+  hostnames:
+  - notebook.tonygilkerson.us
   parentRefs:
-  - name: cafe-gateway
+  - group: gateway.networking.k8s.io
+    kind: Gateway
+    name: cafe-gateway
     namespace: istio-system
-    sectionName: https-notebook
-  # hostnames:
-  # - "notebook.{{ .Values.domain }}"    
   rules:
   - backendRefs:
-    - name: notebook
-      weight: 1
+    - group: ""
+      kind: Service
+      name: notebook
       port: 8080
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: notebook-http-redirect
-spec:
-  parentRefs:
-  - name: cafe-gateway
-    namespace: istio-system
-    sectionName: http-notebook
-  # hostnames:
-  # - "notebook.{{ .Values.domain }}"       
-  rules:
-  - filters:
-    - type: RequestRedirect
-      requestRedirect:
-        scheme: https
-        statusCode: 301
+      weight: 1
+    matches:
+    - path:
+        type: PathPrefix
+        value: /
