--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -98,3 +98,11 @@ metadata:
   labels:
     {{- include "ns-common.labels" . | nindent 4 }}
     {{- include "ns-pod-security-baseline.labels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  gitlab-runner
+  labels:
+    {{- include "ns-common.labels" . | nindent 4 }}
+    {{- include "ns-pod-security-privileged.labels" . | nindent 4 }}
