--- a/env/zoo/helmfile.yaml
+++ b/env/zoo/helmfile.yaml
@@ -41,6 +41,9 @@ helmfiles:
 - path: ../../apps/gitlab
   values:
   - {{ $.Values | toYaml | nindent 4}}
+- path: ../../apps/gitlab-runner
+  values:
+  - {{ $.Values | toYaml | nindent 4}}
 
 
 
