--- a/external-charts/notebook/templates/deployment.yaml
+++ b/external-charts/notebook/templates/deployment.yaml
@@ -25,6 +25,6 @@ spec:
           # allowPrivilegeEscalation: false
           # capabilities:
           #   drop: ["ALL"]
-          runAsNonRoot: true
-          seccompProfile:
-            type: RuntimeDefault
+          # runAsNonRoot: true
+          # seccompProfile:
+          #   type: RuntimeDefault
