--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,6 +19,12 @@ jobs:
         id: vars
         run: echo "VERSION=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
+      - name: Print environment variables
+        run: printenv
+
+      - name: Check Docker version
+        run: docker --version
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -29,3 +35,5 @@ jobs:
         env:
           DOCKER_BUILDKIT: 1
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+          
