--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,39 +1,18 @@
-name: Build Docker Image
+name: Docker Image CI
+
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
+
   build:
-    name: Build Docker Image
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Extract version number
-        id: vars
-        run: echo "VERSION=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
-      - name: Print environment variables
-        run: printenv
-
-      - name: Check Docker version
-        run: docker --version
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: cafe:${{ env.VERSION }}
-        env:
-          DOCKER_BUILDKIT: 1
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-          
+    - uses: actions/checkout@v4
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag cafe:$(date +%s)
