--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag cafe:$(date +%s)
+      run: docker build --platform="linux/amd64" . --file Dockerfile --tag cafe:$(date +%s)
