--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,6 +14,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to GitHub Container Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Build and push Docker image
       run: |
-        docker build . --file Dockerfile --tag cafe:$(date +%s)
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/cafe:latest
+        docker build  --file Dockerfile --tag $IMAGE_NAME .
+        docker push $IMAGE_NAME
