--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,10 +2,10 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
+    paths:
+      - VERSION
 jobs:
 
   build:
@@ -23,6 +23,6 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/cafe:latest
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/cafe:$(cat VERSION)
         docker build  --file Dockerfile --tag $IMAGE_NAME .
         docker push $IMAGE_NAME
