add dagger engine

--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -114,3 +114,11 @@ metadata:
   labels:
     {{- include "ns-common.labels" . | nindent 4 }}
     {{- include "ns-pod-security-privileged.labels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  dagger
+  labels:
+    {{- include "ns-common.labels" . | nindent 4 }}
+    {{- include "ns-pod-security-privileged.labels" . | nindent 4 }}
