--- a/env/zoo/helmfile.yaml
+++ b/env/zoo/helmfile.yaml
@@ -44,6 +44,9 @@ helmfiles:
 - path: ../../apps/home-assistant
   values:
   - {{ $.Values | toYaml | nindent 4}}
+- path: ../../apps/dagger
+  values:
+  - {{ $.Values | toYaml | nindent 4}}
 
 
 
