--- a/external-charts/dagger-helm/values.yaml
+++ b/external-charts/dagger-helm/values.yaml
@@ -35,7 +35,6 @@ engine:
   # Set to `StatefulSet` for running multiple Engines per K8s node
   kind: DaemonSet
 
-
   ### StatefulSet specific configuration
   #
   statefulSet:
@@ -117,6 +116,9 @@ engine:
   ### Set priorityClassName to avoid eviction
   priorityClassName: ""
 
+  ### Set runtimeClassName to use a custom runtimeClass
+  runtimeClassName: ""
+
   readinessProbeSettings:
     initialDelaySeconds: 5
     timeoutSeconds: 14
@@ -178,23 +180,6 @@ engine:
   # - name: shared-data
   #   persistentVolumeClaim:
   #     claimName: my-pvc
-
-  ## Host networking requested for this pod. Use the host's network namespace. 
-  hostNetwork:
-
-  ## Set DNS policy and config for the pod
-  dnsPolicy:
-  dnsConfig: {}
-    # nameservers:
-    # - 8.8.8.8
-    # - 8.8.4.4
-    # searches:
-    # - ns1.svc.cluster-domain.example
-    # - my.dns.search.suffix
-    # options:
-    # - name: ndots
-    #   value: "2"
-    # - name: edns0
 
 magicache:
   enabled: false
