--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -130,3 +130,11 @@ metadata:
   labels:
     {{- include "ns-common.labels" . | nindent 4 }}
     {{- include "ns-pod-security-baseline.labels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  ollama
+  labels:
+    {{- include "ns-common.labels" . | nindent 4 }}
+    {{- include "ns-pod-security-baseline.labels" . | nindent 4 }}
