--- a/external-charts/gitlab-runner/templates/deployment.yaml
+++ b/external-charts/gitlab-runner/templates/deployment.yaml
@@ -2,14 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "gitlab-runner.fullname" . }}
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ default .Release.Namespace .Values.namespace | quote }}
   labels:
     app: {{ include "gitlab-runner.fullname" . }}
     chart: {{ include "gitlab-runner.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-    {{- range $key, $value := .Values.deploymentLabels }}
-    {{   $key }}: {{ $value | quote }}
+    {{- if .Values.deploymentLabels }}
+    {{- tpl (toYaml .Values.deploymentLabels) . | nindent 4 }}
     {{- end }}
   {{- if .Values.deploymentAnnotations }}
   annotations:
@@ -82,7 +82,7 @@ spec:
             command: ["/bin/bash", "/configmaps/check-live", "{{ default 4 .Values.probeTimeoutSeconds | add -1 | max 1 }}"]
           initialDelaySeconds: {{ default 60 .Values.livenessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ default 4 .Values.probeTimeoutSeconds }}
-          periodSeconds: {{ default 10 .Values.livenessProbe.periodSeconds }}
+          periodSeconds: {{ default 60 .Values.livenessProbe.periodSeconds }}
           successThreshold: {{ default 1 .Values.livenessProbe.successThreshold }}
           failureThreshold: {{ default 3 .Values.livenessProbe.failureThreshold }}
           {{- if .Values.livenessProbe.terminationGracePeriodSeconds }}
@@ -93,7 +93,7 @@ spec:
             command: ["/usr/bin/pgrep","gitlab.*runner"]
           initialDelaySeconds: {{ default 60 .Values.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ default 4 .Values.probeTimeoutSeconds }}
-          periodSeconds: {{ default 10 .Values.readinessProbe.periodSeconds }}
+          periodSeconds: {{ default 60 .Values.readinessProbe.periodSeconds }}
           successThreshold: {{ default 1 .Values.readinessProbe.successThreshold }}
           failureThreshold: {{ default 3 .Values.readinessProbe.failureThreshold }}
         ports:
@@ -123,6 +123,9 @@ spec:
         {{- end }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
+        {{- if .Values.extraContainers }}
+{{ toYaml .Values.extraContainers | indent 6 }}
+        {{- end }}
       volumes:
       - name: runner-secrets
         emptyDir:
