--- a/external-charts/gitlab-runner/templates/service-session-server.yaml
+++ b/external-charts/gitlab-runner/templates/service-session-server.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "gitlab-runner.fullname" . }}-session-server
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ default .Release.Namespace .Values.namespace | quote }}
   {{- if .Values.sessionServer.annotations }}
   annotations:
     {{- toYaml .Values.sessionServer.annotations | nindent 4 }}
@@ -29,6 +29,12 @@ spec:
   {{- end }}
   {{- if eq (include "gitlab-runner.server-session-service-type" .) "Headless" }}
   clusterIP: None
+  {{- end }}
+  {{- if .Values.sessionServer.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.sessionServer.externalTrafficPolicy }}
+  {{- end }}
+  {{- if .Values.sessionServer.internalTrafficPolicy }}
+  internalTrafficPolicy: {{ .Values.sessionServer.internalTrafficPolicy }}
   {{- end }}
   ports:
   - protocol: TCP
